:sparkles: Feat: 회원 정보 조회 API 출석 정보 통합